--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/gong-gu?
+    url: jdbc:mysql://localhost:3307/gonggu?
          useSSL=false
          &allowPublicKeyRetrieval=true
          &serverTimeZone=Asia/Seoul
